# bare-locks

./: LICENSE  README.md  pyproject.toml  setup.py
bare_locks/: __init__.py  abstract.py  fcntl.py  flock.py  lock_file_ex.py  msvcrt.py  open.py
bare_locks/pywin32/: __init__.py  win32file.py
os_managed_locks/: __init__.py  abstract.py  fcntl.py  flock.py  lock_file_ex.py  msvcrt.py  open.py
os_managed_locks/pywin32/: __init__.py  pywintypes.py  win32file.py
os_managed_locks/typing/: literal.py
tests/: process_tester.py  test_bare_locks.py  test_os_managed_locks.py
